refactoring connection and implementation of redis

--- a/SecApi/appsettings.json
+++ b/SecApi/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=postgres;UserId=postgres;Password=1234;",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379,abortConnect=false"
   },
   "JWT": {
     "ValidAudience": "http://localhost:7066",
