add send email feature

--- a/SecApi/appsettings.json
+++ b/SecApi/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailPassword": "raoutgjlgoewuewc",
   "URLTwoFactor": "https://localhost:7028/User/TwoFactor",
   "AllowedHosts": "*",
   "ConnectionStrings": {
