--- a/Infra/Infra.csproj
+++ b/Infra/Infra.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\Interfaces\" />
+  </ItemGroup>
+
 </Project>
