--- a/SecApi/appsettingsExample.json
+++ b/SecApi/appsettingsExample.json
@@ -5,16 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "EmailPassword": "raoutgjlgoewuewc",
+  "EmailPassword": "",
   "URLTwoFactor": "https://localhost:7028/User/TwoFactor",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=postgres;UserId=postgres;Password=1234;",
-    "Redis": "localhost:6379,abortConnect=false"
+    "DefaultConnection": "",
+    "Redis": ""
   },
   "JWT": {
     "ValidAudience": "http://localhost:7066",
     "ValidIssuer": "http://localhost:7066",
-    "Secret": "JWTAuthenticationSecured7630b55d7c954cf493283886888427ec"
+    "Secret": ""
   }
 }
